--- a/Backseating_Begone.csproj
+++ b/Backseating_Begone.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>Backseating_Begone</AssemblyName>
+    <AssemblyName>Backseating Begone</AssemblyName>
     <Description>Disables emotes on cards and for targetting enemies/allies.</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
